--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-01-09  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Released 1.0
+
 2004-12-04  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Started ChangeLog
