--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-07  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Separate attribute caching to a separate layer
+
 2005-02-03  Miklos Szeredi <miklos@szeredi.hu>
 
 	Fix PKG_CONFIG_PATH setting in configure.ac (reported by Alpar
