--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-02-16  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Added simple readahead (big performance gain in case of
+	sequential read pattern).  Can be disabled with '-o no_readahead'
+
 2005-02-14  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Added asynchronous writeback (big performance gain) and made
