--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,18 @@
+What is new in 1.1
+------------------
+
+* Performance improvements:
+
+   - directory content caching
+
+   - symlink caching
+
+   - asynchronous writeback
+
+   - readahead
+
+* Fixed '-p' option
+
 What is new in 1.0
 ------------------
 
