--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-05-05  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Work around missing truncate() support in some older sftp
+	servers (only works for zero size truncate).  Thanks to Eduard
+	Czimbalmos for the bug report and help with testing
+
 2005-04-13  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Fix compilation with gcc-2.95.  Reported by David A. Gershman
