--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-08-17  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Try to calculate approximate disk usage of files from their
+	size, so that 'du' returns meaningful results.  Problem reported
+	by Bernd Amend.
+
 2005-08-15  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Released 1.2
