--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-23  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Add create() method
+
 2005-08-17  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Try to calculate approximate disk usage of files from their
