--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-10-15  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Protect request ID allocation with mutex.  Bug report by Tvrtko
+	Ursulin
+
 2005-08-17  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Try to calculate approximate disk usage of files from their
