--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 2005-10-18  Miklos Szeredi <miklos@szeredi.hu>
 
-	* Add remote uid detection and translation.  Idea and
-	implementation details worked out by Jean-Marc Valin
+	* Add remote uid detection and translation ('idmap=user' option).
+	Idea and implementation details worked out by Jean-Marc Valin
 
 2005-10-17  Miklos Szeredi <miklos@szeredi.hu>
 
