--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-10-27  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Add support for SSH protocol version 1.  Bug reported by Miklos
+	Bagi Jr.
+
 2005-10-26  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Fix typo (ConnectTimeout -> ConnectionTimeout) in ssh options.
