--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-10-28  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Add atomic create+open and ftruncate operation.  This should fix
+	issues with 'cp' and other programs failing with "Permission
+	denied".  Needs FUSE version 2.5 and kernel version 2.6.15 (just a
+	guess, since neither of them is released yet).
+
 2005-10-27  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Add support for SSH protocol version 1.  Bug reported by Miklos
