--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-29  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Released 1.3
+
 2005-10-28  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Add atomic create+open and ftruncate operation.  This should fix
