--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,16 @@
+What is new in 1.3
+------------------
+
+* Add workaround for failure to rename to an existing file
+
+* Simple user ID mapping
+
+* Estimate disk usage of files based on size
+
+* Report "infinite" disk space
+
+* Bug fixes
+
 What is new in 1.2
 ------------------
 
