--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-11-16  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Replace EPROTO with the more portable EIO
+
 2005-10-29  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Use FUSE version 25 if available
