--- a/README
+++ b/README
@@ -25,7 +25,7 @@ codebase, so I rewrote it.  Features of this implementation are:
 Latest version
 ==============
 
-The latest and more information can be found on
+The latest version and more information can be found on
 
   http://fuse.sourceforge.net/sshfs.html
 
