--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-11-28  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Set statvfs::f_frsize
+
 2005-11-23  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Fix warnings on 64bit systems.  Reported by D. R. Evans
