--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-12-09  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Use new option parsing interface of FUSE
+
 2005-11-28  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Set statvfs::f_frsize
