--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-01-09  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Added 'workaround=symlink' option to "fix-up" absolute symlinks.
+	Patch by Paul Jarc	
+
 2005-12-09  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Use new option parsing interface of FUSE
