--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-01-25  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Use TCP_NODELAY socket option for direct connection.  This may
+	improve download speed in some circumstances
+
 2006-01-20  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Update to fuse API 2.7
