--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-01-29  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Add '-olarge_read' option for Linux-2.4.*.  This should
+	generally improve download performance
+
 2006-01-27  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Add workaround (enabled by default) for ssh clients not setting
