--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2006-01-30  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Fix data consitency bug if readahead is enabled and writes are
+	intermixed with reads.  Only fixed for the case when reads and
+	writes are performed on the same file handle.  Bug reported and
+	test program written by Wolfgang Köbler
+
 2006-01-29  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Add '-olarge_read' option for Linux-2.4.*.  This should
