--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-31  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Fix problems with nodelay workaround on FreeBSD.
+
 2006-01-30  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Fix data consitency bug if readahead is enabled and writes are
