--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-02-16  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Block TERM/INT/HUP/QUIT signals in sshfs reading thread, so they
+	will always be received by the FUSE main thread.  Fixes the
+	"double ^C" problem seen on FreeBSD.
+
 2006-01-31  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Fix problems with nodelay workaround on FreeBSD.
