--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-02-22  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Add -fPIC to the comile flags of sshnodelay.so.  Reported by
+	Anthony Kolasny
+
 2006-02-20  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Released 1.5
