--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 
 	* Avoid double memcpy on writes.  Patch by Joseph M Link
 
+	* More memory copy avoidance
+
 2006-02-22  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Add -fPIC to the comile flags of sshnodelay.so.  Reported by
