--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-08  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Fix bug in symlink transformation.  Reported by Ralf Hoffmann
+
 2006-02-24  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Add workaround for broken truncate on old sftp servers.  Can be
