--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-09  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Fix segfault if remote host is down and reconnection is enabled
+
 2006-03-08  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Fix bug in symlink transformation.  Reported by Ralf Hoffmann
