--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2006-03-10  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Use socketpair() instead of pipe() for communication between ssh
+	and sshfs.  Patch from Csaba Henk
+
+	* Update to FUSE interface version 26
+
 2006-03-09  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Released 1.6
