--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-17  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Cosmetics on bogus statfs numbers
+
 2006-08-16  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Add option 'follow_symlinks' to resolve symlinks on the server.
