--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-08-17  Miklos Szeredi <miklos@szeredi.hu>
 
+	* Released 1.7
+
+2006-08-17  Miklos Szeredi <miklos@szeredi.hu>
+
 	* Cosmetics on bogus statfs numbers
 
 2006-08-16  Miklos Szeredi <miklos@szeredi.hu>
