--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+What is new in 1.7
+------------------
+
+* Tolerate servers which print a banner on login
+
+* Small improvements
+
 What is new in 1.6
 ------------------
 
