--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+What is new in 1.9
+------------------
+
+* Fix a serious bug, that could result in sshfs hanging, crashing, or
+  reporting out-of-memory
+
 What is new in 1.8
 ------------------
 
