--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,9 @@
 	KbdInteractiveAuthentication, KbdInteractiveDevices, LocalCommand,
 	RekeyLimit (Debian bug #430225).
 
+	* Allow the '-ossh_command=CMD' command to contain parameters.
+	Escape charater is backslash.
+
 2008-04-21  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Fix incorrect disk usage reported by 'du' for files of size 4GB
