Add manual page

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,10 @@
-2008-04-22  Miklos Szeredi <miklos@szeredi.hu>
+2008-04-23  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Released 2.0
+
+2008-04-23  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Add manual page.  Written by Bartosz Fenski
 
 2008-04-22  Miklos Szeredi <miklos@szeredi.hu>
 
