--- a/sshfs.1
+++ b/sshfs.1
@@ -1,8 +1,24 @@
 .TH SSHFS "1" "April 2008" "SSHFS version 2.0" "User Commands"
 .SH NAME
 SSHFS \- filesystem client based on ssh
+.SH SYNOPSIS
+.SS mounting
+.TP
+\fBsshfs\fP [\fIuser\fP@]\fBhost\fP:[\fIdir\fP] \fBmountpoint\fP [\fIoptions\fP]
+.SS unmounting
+.TP
+\fBfusermount -u mountpoint\fP
 .SH DESCRIPTION
-usage: sshfs [user@]host:[dir] mountpoint [options]
+SSHFS (Secure SHell FileSystem) is a file system for Linux (and other
+operating systems with a FUSE implementation, such as Mac OS X or FreeBSD)
+capable of operating on files on a remote computer using just a secure
+shell login on the remote computer. On the local computer where the SSHFS
+is mounted, the implementation makes use of the FUSE (Filesystem in
+Userspace) kernel module. The practical effect of this is that the end user
+can seamlessly interact with remote files being securely served over SSH
+just as if they were local files on his/her computer. On the remote
+computer the SFTP subsystem of SSH is used.
+.SH OPTIONS
 .SS "general options:"
 .TP
 \fB\-o\fR opt,[opt...]
@@ -47,6 +63,7 @@ sets timeout for {stat,dir,link} cache
 .TP
 \fB\-o\fR workaround=LIST
 colon separated list of workarounds
+.RS 8
 .TP
 none
 no workarounds enabled
@@ -65,15 +82,18 @@ fix truncate for old servers (default: off)
 .TP
 [no]buflimit
 fix buffer fillup bug in server (default: on)
+.RE
 .TP
 \fB\-o\fR idmap=TYPE
 user/group ID mapping, possible types are:
+.RS 8
 .TP
 none
 no translation of the ID space (default)
 .TP
 user
 only translate UID of connecting user
+.RE
 .TP
 \fB\-o\fR ssh_command=CMD
 execute CMD instead of 'ssh'
@@ -212,3 +232,12 @@ original encoding of file names (default: UTF-8)
 .TP
 \fB\-o\fR to_code=CHARSET
 new encoding of the file names (default: ISO-8859-2)
+.PD
+.SH "AUTHORS"
+.LP
+SSHFS has been written by Miklos Seredi <miklos@szeredi.hu>.
+.LP
+This man page was written by Bartosz Fenski <fenio@debian.org> for the
+Debian GNU/Linux distribution (but it may be used by others).
+
+
