Add '-F' option to specify the ssh config file

--- a/sshfs.1
+++ b/sshfs.1
@@ -37,6 +37,9 @@ equivalent to '\-o port=PORT'
 \fB\-C\fR
 equivalent to '\-o compression=yes'
 .TP
+\fB\-F\fR ssh_configfile
+specifies alternative ssh configuration file
+.TP
 \fB\-1\fR
 equivalent to '\-o ssh_protocol=1'
 .TP
