--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-06-24  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Add '-F' option to specify the ssh config file.  Patch by Pat
+	Pascal.
+
 2008-05-06  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Fix bug in caching which could cause file corruption for append
