--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2008-10-08  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Handle numerical IPv6 addresses enclosed in square brackets.
+	Reported by Andre-John Mas
+
+	* Fix error if username contains a comma character.  Reported by
+	Yang Zhang
+
 2008-07-11  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Released 2.1
