Escape commas in fsname option if libfuse supports it

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-10-20  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Escape commas in fsname option if libfuse supports it
+
 2008-10-08  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Handle numerical IPv6 addresses enclosed in square brackets.
