--- a/sshfs.1
+++ b/sshfs.1
@@ -55,7 +55,7 @@ synchronous reads (no speculative readahead)
 \fB\-o\fR sshfs_debug
 print some debugging information
 .TP
-\fB\-o\fR cache=YESNO
+\fB\-o\fR cache=BOOL
 enable caching {yes,no} (default: yes)
 .TP
 \fB\-o\fR cache_timeout=N
