--- a/sshfs.1
+++ b/sshfs.1
@@ -46,6 +46,9 @@ equivalent to '\-o ssh_protocol=1'
 \fB\-o\fR reconnect
 reconnect to server
 .TP
+\fB\-o\fR delay_connect
+delay connection to server
+.TP
 \fB\-o\fR sshfs_sync
 synchronous writes
 .TP
