Check mountpoint and fuse options before starting an ssh session (debian bug #535333).  This is only supported if compiled against libfuse-2.6 or later. Reported by Greg Kochanski

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-07-15  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Check mountpoint and fuse options before starting an ssh
+	session (debian bug #535333).  This is only supported if compiled
+	against libfuse-2.6 or later. Reported by Greg Kochanski
+
 2008-07-15  Sebastian Dransfeld <sebastid@tango.flipp.net>
 
 	* Add option 'delay_connect': This will always create the sshfs mount,
