--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-03-25  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Fix possible deadlock on reconnection.  Reported by Florian
+	Zumbiehl
+
 2011-01-25  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Fix cleanup when ssh connection is terminated.  This prevents
