--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2011-07-01  Miklos Szeredi <miklos@szeredi.hu>
 
+	* Released 2.3
+
+2011-07-01  Miklos Szeredi <miklos@szeredi.hu>
+
 	* Add hard link operation.  Works if the server supports the
 	"hardlink@openssh.com" protocol extension.
 
