--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-11-14  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Fix double free if reconnection races with request sending.
+	Patch by E. Kuemmerle
+
 2011-10-21  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Remove "-oPreferredAuthentications" from ssh options if the
