--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-11-25  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Make chown respect the UID mapping policy.  Reported and tested
+	by Vivenzio Pagliari
+
 2011-11-16  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Submit max 32k reads and writes to the sftp server.  Also don't
