Add -o idmap=file, -o uidmap=FILE, -o gidmap=FILE
These options allow you to create a pair of local files, with
username:uid/groupname:gid pairs, one per line. Alternatively, files can
be in standard /etc/passwd / /etc/group format.

The uid/gids are for the remote server, their local counterparts are
looked up with a local getpwnam/getgrnam call. Any stat() calls will
show with the remapped local uid/gid, and any chown() calls will be
remapped back to the remote uid/gid.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2011-12-16  Mike Kelly <mike@pair.com>
+
+	* Add -o idmap=file, -o uidmap=FILE, -o gidmap=FILE. These options
+	allow you to create a pair of local files, similar to /etc/passwd or
+	/etc/group files from the remote server, and use those to remap all
+	the given UIDs/GIDs.
+
 2011-11-25  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Make chown respect the UID mapping policy.  Reported and tested
