--- a/sshfs.1
+++ b/sshfs.1
@@ -138,6 +138,8 @@ path to sftp server or subsystem (default: sftp)
 .TP
 \fB\-o\fR directport=PORT
 directly connect to PORT bypassing ssh
+\fB\-o\fR slave
+communicate over stdin and stdout bypassing network
 .TP
 \fB\-o\fR transform_symlinks
 transform absolute symlinks to relative
