--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2012-03-08  Miklos Szeredi <miklos@szeredi.hu>
 
+	* Released 2.4
+
+2012-03-08  Miklos Szeredi <miklos@szeredi.hu>
+
 	* Make sure idmap files aren't writable by others otherwise, other
 	local users could change the mapping, and gain access to things
 	they shouldn't.  Patch by Mike Kelly
