--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2012-05-14  Miklos Szeredi <miklos@szeredi.hu>
+
+	* When checking root directory use LSTAT not STAT.  This prevents
+	I/O error being returned after a successful mount if a symlink is
+	mounted.  Reported by Bart Friederichs
+
 2012-03-08  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Released 2.4
