fix a typo in man page

--- a/sshfs.1
+++ b/sshfs.1
@@ -257,7 +257,7 @@ perform reads synchronously
 \fB\-o\fR subdir=DIR
 prepend this directory to all paths (mandatory)
 .TP
-\fB\-o\fR [no]rellinksa
+\fB\-o\fR [no]rellinks
 transform absolute symlinks to relative
 .TP
 [iconv]
